--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -41,13 +41,12 @@
       </ion-row>
       <ion-row class="align">
         <ion-col class="ion-text-left">
-          <ion-input
-            color="tertiary"
+          <input
             type="file"
             id="txtFileUpload"
             (change)="fileChangedEvent($event)"
             accept=".csv"
-          ></ion-input>
+          />
         </ion-col>
         <ion-col>
           <ion-item>
