--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -29,21 +29,11 @@
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-item>
-            <ion-item
-              routerDirection="'root'"
-              *ngIf="loggedIn"
-              routerLink="/sales"
-              lines="none"
-            >
+            <ion-item *ngIf="loggedIn" routerLink="/sales" lines="none">
               <ion-icon slot="start" name="list-box"></ion-icon>
               <ion-label>Sales Invoice</ion-label>
             </ion-item>
-            <ion-item
-              routerDirection="'root'"
-              *ngIf="loggedIn"
-              routerLink="/warranty"
-              lines="none"
-            >
+            <ion-item *ngIf="loggedIn" routerLink="/warranty" lines="none">
               <ion-icon slot="start" name="settings"></ion-icon>
               <ion-label>Warranty</ion-label>
             </ion-item>
