feat(rma-frontend): Wired select Items with backend

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
@@ -8,12 +8,16 @@
       [formControl]="itemFormControl"
       [matAutocomplete]="auto"
     />
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+    <mat-autocomplete
+      autoActiveFirstOption
+      #auto="matAutocomplete"
+      [displayWith]="getOptionText"
+    >
       <mat-option
         *ngFor="let option of filteredItemList | async"
-        [value]="option.name"
+        [value]="option"
       >
-        {{ option.name }}
+        {{ option.item_name }} ( {{ option.item_code }} )
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
