feat(rma-frontend): add FAB on add sales page

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -10,6 +10,16 @@
 </ion-header>
 
 <ion-content class="page-background">
+  <ion-fab class="ion-margin-end" vertical="top" color="light" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="arrow-dropdown"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-button color="medium">DRAFT</ion-button>
+      <ion-button color="light">DELIVERY NOTE</ion-button>
+      <ion-button color="primary">SALES INVOICE</ion-button>
+    </ion-fab-list>
+  </ion-fab>
   <ion-grid class="ion-no-padding">
     <ion-row class="ion-no-padding">
       <ion-col class="ion-no-padding">
