--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -95,7 +95,7 @@
                 <ion-col>
                   <ion-item>
                     <ion-label position="floating">Posting Date</ion-label>
-                    <ion-datetime display-format="DD.MM.YYYY"></ion-datetime>
+                    <ion-datetime display-format="DD.MM.YYYY" (ionChange)="datePicked($event)" ></ion-datetime>
                   </ion-item>
                 </ion-col>
               </ion-row>
