feat(rma-frontend): Added Submit button wired with backend in details component

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -1,5 +1,10 @@
 <ion-card>
   <ion-card-content>
+    <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab-button (click)="submitSalesInvoice()">
+        SUBMIT
+      </ion-fab-button>
+    </ion-fab>
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col>
