--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-card-content>
-    <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab *ngIf="salesInvoiceDetails?.submitted === false"vertical="top" horizontal="end" slot="fixed">
       <ion-fab-button (click)="submitSalesInvoice()">
         SUBMIT
       </ion-fab-button>
