feat(rma-frontend): Add blank settings page

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -18,7 +18,7 @@
     horizontal="end"
   >
     <ion-fab-button class="fab-position" (click)="submitDraft()">
-      SAVE
+      <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-grid class="ion-no-padding">
