--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -31,11 +31,15 @@
             </ion-item>
             <ion-item *ngIf="loggedIn" routerLink="/sales" lines="none">
               <ion-icon slot="start" name="list-box"></ion-icon>
-              <ion-label>Sales Invoice</ion-label>
+              <ion-label>Sales</ion-label>
             </ion-item>
             <ion-item *ngIf="loggedIn" routerLink="/warranty" lines="none">
-              <ion-icon slot="start" name="settings"></ion-icon>
+              <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
+            </ion-item>
+            <ion-item *ngIf="loggedIn" routerLink="/settings" lines="none">
+              <ion-icon slot="start" name="settings"></ion-icon>
+              <ion-label>Settings</ion-label>
             </ion-item>
             <ion-item
               routerDirection="'root'"
