--- a/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/warranty-claims/warranty-claims.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/warranty-claims/warranty-claims.component.html
@@ -1,5 +1,5 @@
 <ion-card>
-  <ion-card-content class="ion-no-padding table-container">
+  <ion-card-content class="table-container">
     <div class="loading-shade" *ngIf="dataSource.loading$ | async">
       <mat-progress-bar
         *ngIf="dataSource.loading$ | async"
